--- a/sdk/OoyalaSkinSDK/android/sdk/src/main/res/values/strings.xml
+++ b/sdk/OoyalaSkinSDK/android/sdk/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ooyalaSkinSDK</string>
+    <string name="ic_play">&#xf04b;</string>
+    <string name="ic_pause">&#xf04c;</string>
+    <string name="ic_stop">&#xf04d;</string>
 </resources>
