--- a/sdk/OoyalaSkinSDK/android/sdk/src/main/res/values/strings.xml
+++ b/sdk/OoyalaSkinSDK/android/sdk/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="ic_play">&#xf04b;</string>
     <string name="ic_pause">&#xf04c;</string>
     <string name="ic_stop">&#xf04d;</string>
+    <string name="ic_facebook">&#xf09a;</string>
+    <string name="ic_twitter">&#xf099;</string>
 </resources>
